--- a/apple-store.html
+++ b/apple-store.html
@@ -18,6 +18,7 @@
       <!-- header -->
       <header>
         <a href="https://www.apple.com/" class="header-logo"></a>
+
         <nav class="header-nav">
           <a href="https://www.apple.com/" class="header-nav__item">Store</a>
           <a href="https://www.apple.com/" class="header-nav__item">Mac</a>
@@ -36,6 +37,7 @@
             >Accessories</a
           ><a href="https://www.apple.com/" class="header-nav__item">Support</a>
         </nav>
+
         <button class="header-button header-button--search"></button>
         <button class="header-button header-button--bag"></button>
       </header>
@@ -59,6 +61,7 @@
             Gift magic this holiday.
           </div>
         </div>
+
         <div class="head-questions">
           <div class="question question--shop-help">
             <img class="question__icon" />
@@ -190,80 +193,259 @@
         </div>
       </section>
 
-      <!-- latest products -->
+      <!-- Latest -->
       <section class="latest-container">
         <div class="latest-content">
-          <div class="latest__head">
-            <div class="latest-heading">The latest.</div>
-            <div class="latest-subheading">Let them unwrap wonders.</div>
+          <div class="latest-heads">
+            <div class="latest-head latest-head--heading">The latest.</div>
+            <div class="latest-head latest-head--subheading">
+              Let them unwrap wonders.
+            </div>
           </div>
-          <div class="latest-cards">
-            <div class="latest-card">
-              <img class="latest-card__img" />
-              <div class="latest-card-text">
-                <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
-                <div class="latest-card__name">iPhone 16 Pro</div>
-                <div class="latest-card__price">
-                  From $999 or $41.62/mo. for 24 mo.*
+
+          <div class="latest-scroller">
+            <div class="latest-cards">
+              <div class="latest-card">
+                <img
+                  src="image-store/latest-iphone-pro.png"
+                  class="latest-card__img"
+                />
+                <div class="latest-card-text">
+                  <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+                  <div class="latest-card__name">iPhone 16 Pro</div>
+                  <div class="latest-card__price">
+                    From $999 or $41.62/mo. for 24 mo.*
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="latest-card">
-              <img class="latest-card__img" />
-              <div class="latest-card-text">
-                <div class="latest-card__addinfo"></div>
-                <div class="latest-card__name">Apple Watch Series 10</div>
-                <div class="latest-card__price">
-                  From $399 or $33.25/mo. for 12 mo.
+
+              <div class="latest-card">
+                <img
+                  src="image-store/latest-watch-series.png"
+                  class="latest-card__img"
+                />
+                <div class="latest-card-text">
+                  <div
+                    class="latest-card__addinfo latest-card__addinfo--watchseries10"
+                  >
+                    APPLE INTELLIGENCE
+                  </div>
+                  <div class="latest-card__name">Apple Watch Series 10</div>
+                  <div class="latest-card__price">
+                    From $399 or $33.25/mo. for 12 mo.
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="latest-card">
-              <img class="latest-card__img" />
-              <div class="latest-card-text">
-                <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
-                <div class="latest-card__name">iPad mini</div>
-                <div class="latest-card__price">
-                  From $499 or $41.58/mo. for 12 mo.
+
+              <div class="latest-card">
+                <img
+                  src="image-store/latest-ipad-mini.png"
+                  class="latest-card__img"
+                />
+                <div class="latest-card-text">
+                  <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+                  <div class="latest-card__name">iPad mini</div>
+                  <div class="latest-card__price">
+                    From $499 or $41.58/mo. for 12 mo.
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="latest-card">
-              <img class="latest-card__img" />
-              <div class="latest-card-text">
-                <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
-                <div class="latest-card__name">MacBook Pro</div>
-                <div class="latest-card__price">
-                  From $1599 or $133.25/mo. for 12 mo.
+
+              <div class="latest-card">
+                <img
+                  src="image-store/latest-macbook-pro.jpg"
+                  class="latest-card__img"
+                />
+                <div class="latest-card-text">
+                  <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+                  <div class="latest-card__name">MacBook Pro</div>
+                  <div class="latest-card__price">
+                    From $1599 or $133.25/mo. for 12 mo.
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="latest-card">
-              <img class="latest-card__img" />
-              <div class="latest-card-text">
-                <div class="latest-card__addinfo">LIMITED-TIME OFFER</div>
-                <div class="latest-card__name">
-                  Save on Mac and iPad for college, choose AirPods or an
-                  eligible accessory.
+
+              <div class="latest-card">
+                <img
+                  src="image-store/latest-airpods.jpg"
+                  class="latest-card__img"
+                />
+                <div class="latest-card-text">
+                  <div class="latest-card__addinfo">LIMITED-TIME OFFER</div>
+                  <div class="latest-card__name">
+                    Save on Mac and iPad for college, choose AirPods or an
+                    eligible accessory.
+                  </div>
+                  <div class="latest-card__price"></div>
                 </div>
-                <div class="latest-card__price"></div>
               </div>
-            </div>
-            <div class="latest-card">
-              <img class="latest-card__img" />
-              <div class="latest-card-text">
-                <div class="latest-card__addinfo"></div>
-                <div class="latest-card__name">Apple Watch Ultra 2</div>
-                <div>New finish. Never quit.</div>
-                <div class="latest-card__price">
-                  From $799 or $66.55/mo. for 12 mo.†
+
+              <div class="latest-card">
+                <img
+                  src="image-store/latest-watch-ultra.jpg"
+                  class="latest-card__img"
+                />
+                <div class="latest-card-text">
+                  <div
+                    class="latest-card__addinfo latest-card__addinfo--watchultra2"
+                  >
+                    APPLE INTELLIGENCE
+                  </div>
+                  <div class="latest-card__name latest-card__name--watchultra2">
+                    Apple Watch Ultra 2
+                  </div>
+                  <div
+                    class="latest-card__slogan latest-card__slogan--watchultra2"
+                  >
+                    New finish. Never quit.
+                  </div>
+                  <div
+                    class="latest-card__price latest-card__price--watchultra2"
+                  >
+                    From $799 or $66.55/mo. for 12 mo.†
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section></section>
+
+      <!-- Personalization -->
+      <section class="personalization-container">
+        <div class="personalization-content">
+          <div class="personalization-heads">
+            <div class="personalization-head personalization-head--heading">
+              Personalization.
+            </div>
+            <div class="personalization-head personalization-head--subheading">
+              Let them unwrap wonders.
+            </div>
+          </div>
+
+          <div class="personalization-cards">
+            <div class="personalization-card-first">
+              <img class="personalization-card-first__img" />
+              <div class="personalization-card-first__title">
+                Make their gift one of a kind.
+              </div>
+            </div>
+
+            <div class="personalization-card">
+              <div class="personalization-card-imgbox">
+                <img class="personalization-card__img" />
+              </div>
+              <div class="personalization-card-colorbox">
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+              </div>
+              <div class="personalization-card-text">
+                <div class="personalization-card__option">Free Engraving</div>
+                <div class="personalization-card__name">
+                  AirPods Max - Purple
+                </div>
+                <div class="personalization-card__price">$549.00</div>
+              </div>
+            </div>
+
+            <div class="personalization-card">
+              <div class="personalization-card-imgbox">
+                <img class="personalization-card__img" />
+              </div>
+              <div class="personalization-card-colorbox">
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+              </div>
+              <div class="personalization-card-text">
+                <div class="personalization-card__option">Free Engraving</div>
+                <div class="personalization-card__name">AirPods Pro 2</div>
+                <div class="personalization-card__price">$249.00</div>
+              </div>
+            </div>
+
+            <div class="personalization-card">
+              <div class="personalization-card-imgbox">
+                <img class="personalization-card__img" />
+              </div>
+              <div class="personalization-card-colorbox">
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+              </div>
+              <div class="personalization-card-text">
+                <div class="personalization-card__option">Free Engraving</div>
+                <div class="personalization-card__name">
+                  AirPods 4 with Active Noise Cancellation
+                </div>
+                <div class="personalization-card__price">$179.00</div>
+              </div>
+            </div>
+
+            <div class="personalization-card">
+              <div class="personalization-card-imgbox">
+                <img class="personalization-card__img" />
+              </div>
+              <div class="personalization-card-colorbox">
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+              </div>
+              <div class="personalization-card-text">
+                <div class="personalization-card__option">New</div>
+                <div class="personalization-card__name">Apple Pencil Pro</div>
+                <div class="personalization-card__price">$49.00</div>
+              </div>
+            </div>
+
+            <div class="personalization-card">
+              <div class="personalization-card-imgbox">
+                <img class="personalization-card__img" />
+              </div>
+              <div class="personalization-card-colorbox">
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+              </div>
+              <div class="personalization-card-text">
+                <div class="personalization-card__option"></div>
+                <div class="personalization-card__name"></div>
+                <div class="personalization-card__price"></div>
+              </div>
+            </div>
+
+            <div class="personalization-card">
+              <div class="personalization-card-imgbox">
+                <img class="personalization-card__img" />
+              </div>
+              <div class="personalization-card-colorbox">
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+                <div class="personalization-card__color"></div>
+              </div>
+              <div class="personalization-card-text">
+                <div class="personalization-card__option"></div>
+                <div class="personalization-card__name"></div>
+                <div class="personalization-card__price"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section></section>
     </main>
   </body>
