--- a/apple-store.html
+++ b/apple-store.html
@@ -323,128 +323,121 @@
             </div>
           </div>
 
-          <div class="personalization-cards">
-            <div class="personalization-card-first">
-              <img class="personalization-card-first__img" />
-              <div class="personalization-card-first__title">
-                Make their gift one of a kind.
-              </div>
-            </div>
-
-            <div class="personalization-card">
-              <div class="personalization-card-imgbox">
-                <img class="personalization-card__img" />
-              </div>
-              <div class="personalization-card-colorbox">
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-              </div>
-              <div class="personalization-card-text">
-                <div class="personalization-card__option">Free Engraving</div>
-                <div class="personalization-card__name">
-                  AirPods Max - Purple
+          <div class="personalization-cards-scroller">
+            <div class="personalization-cards">
+              <div class="personalization-card-first">
+                <img
+                  src="image-store/persona-gift.png"
+                  class="personalization-card-first__img"
+                />
+                <div class="personalization-card-first__title">
+                  Make their gift one of a kind.
                 </div>
-                <div class="personalization-card__price">$549.00</div>
               </div>
-            </div>
 
-            <div class="personalization-card">
-              <div class="personalization-card-imgbox">
-                <img class="personalization-card__img" />
-              </div>
-              <div class="personalization-card-colorbox">
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-              </div>
-              <div class="personalization-card-text">
-                <div class="personalization-card__option">Free Engraving</div>
-                <div class="personalization-card__name">AirPods Pro 2</div>
-                <div class="personalization-card__price">$249.00</div>
-              </div>
-            </div>
-
-            <div class="personalization-card">
-              <div class="personalization-card-imgbox">
-                <img class="personalization-card__img" />
-              </div>
-              <div class="personalization-card-colorbox">
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-              </div>
-              <div class="personalization-card-text">
-                <div class="personalization-card__option">Free Engraving</div>
-                <div class="personalization-card__name">
-                  AirPods 4 with Active Noise Cancellation
+              <div
+                class="personalization-card personalization-card--airpods-max"
+              >
+                <div class="personalization-card-imgbox">
+                  <img
+                    src="image-store/persona-airpods-max.png"
+                    class="personalization-card__img"
+                  />
                 </div>
-                <div class="personalization-card__price">$179.00</div>
+                <div class="personalization-card-colorbox">
+                  <div class="personalization-card__color"></div>
+                  <div class="personalization-card__color"></div>
+                  <div class="personalization-card__color"></div>
+                  <div class="personalization-card__color"></div>
+                  <div class="personalization-card__color"></div>
+                </div>
+                <div class="personalization-card-text">
+                  <div class="personalization-card__option">Free Engraving</div>
+                  <div class="personalization-card__name">
+                    AirPods Max - Purple
+                  </div>
+                  <div class="personalization-card__price">$549.00</div>
+                </div>
               </div>
-            </div>
 
-            <div class="personalization-card">
-              <div class="personalization-card-imgbox">
-                <img class="personalization-card__img" />
+              <div class="personalization-card">
+                <div class="personalization-card-imgbox">
+                  <img
+                    src="image-store/persona-airpods-pro-2.png"
+                    class="personalization-card__img"
+                  />
+                </div>
+                <div class="personalization-card-text">
+                  <div class="personalization-card__option">Free Engraving</div>
+                  <div class="personalization-card__name">AirPods Pro 2</div>
+                  <div class="personalization-card__price">$249.00</div>
+                </div>
               </div>
-              <div class="personalization-card-colorbox">
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-              </div>
-              <div class="personalization-card-text">
-                <div class="personalization-card__option">New</div>
-                <div class="personalization-card__name">Apple Pencil Pro</div>
-                <div class="personalization-card__price">$49.00</div>
-              </div>
-            </div>
 
-            <div class="personalization-card">
-              <div class="personalization-card-imgbox">
-                <img class="personalization-card__img" />
+              <div class="personalization-card personalization-card--airpods-4">
+                <div class="personalization-card-imgbox">
+                  <img
+                    src="image-store/persona-airpods-4.png"
+                    class="personalization-card__img"
+                  />
+                </div>
+                <div class="personalization-card-text">
+                  <div class="personalization-card__option">Free Engraving</div>
+                  <div class="personalization-card__name">
+                    AirPods 4 with Active Noise Cancellation
+                  </div>
+                  <div class="personalization-card__price">$179.00</div>
+                </div>
               </div>
-              <div class="personalization-card-colorbox">
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-              </div>
-              <div class="personalization-card-text">
-                <div class="personalization-card__option"></div>
-                <div class="personalization-card__name"></div>
-                <div class="personalization-card__price"></div>
-              </div>
-            </div>
 
-            <div class="personalization-card">
-              <div class="personalization-card-imgbox">
-                <img class="personalization-card__img" />
+              <div class="personalization-card">
+                <div class="personalization-card-imgbox">
+                  <img
+                    src="image-store/persona-pencil-pro.png"
+                    class="personalization-card__img"
+                  />
+                </div>
+                <div class="personalization-card-text">
+                  <div class="personalization-card__option">New</div>
+                  <div class="personalization-card__name">Apple Pencil Pro</div>
+                  <div class="personalization-card__price">$49.00</div>
+                </div>
               </div>
-              <div class="personalization-card-colorbox">
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
-                <div class="personalization-card__color"></div>
+
+              <div class="personalization-card">
+                <div class="personalization-card-imgbox">
+                  <img class="personalization-card__img" />
+                </div>
+                <div class="personalization-card-text">
+                  <div class="personalization-card__option"></div>
+                  <div class="personalization-card__name"></div>
+                  <div class="personalization-card__price"></div>
+                </div>
               </div>
-              <div class="personalization-card-text">
-                <div class="personalization-card__option"></div>
-                <div class="personalization-card__name"></div>
-                <div class="personalization-card__price"></div>
+
+              <div class="personalization-card">
+                <div class="personalization-card-imgbox">
+                  <img class="personalization-card__img" />
+                </div>
+                <div class="personalization-card-text">
+                  <div class="personalization-card__option"></div>
+                  <div class="personalization-card__name"></div>
+                  <div class="personalization-card__price"></div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- Holiday Picks -->
+      <section></section>
+
+      <section></section>
+
+      <section></section>
+
+      <section></section>
 
       <section></section>
     </main>
