only at apple start

--- a/apple-store.html
+++ b/apple-store.html
@@ -433,13 +433,60 @@
       <!-- Holiday Picks -->
       <section></section>
 
+      <!-- Only at Apple -->
+      <section>
+        <div>
+          <!-- heading -->
+          <div>
+            <div>Only at Apple.</div>
+            <div>With you every step of the holiday</div>
+          </div>
+          <!-- scroller -->
+          <div>
+            <!-- divuud -->
+            <div>
+              <!-- 1-rtomdiv -->
+              <div>
+                <img />
+                <div>
+                  Get gifts in time for the holidays with two hour delivery,²
+                  free delivery,or easy pickup.
+                </div>
+              </div>
+              <!-- 2-rjijigdiv -->
+              <div>
+                <div>
+                  Customize your Mac and create your own style of Apple Watch.
+                </div>
+                <div>Pay in full or pay over time. Your choice.</div>
+              </div>
+              <!-- 3-rjijigdiv -->
+              <div>
+                <div>Free extended returns between now and 1/8/25.</div>
+                <div>
+                  Make them yours. Engrave a mix of emoji, names, and numbers
+                  for free.
+                </div>
+              </div>
+              <!-- 3-rtomdiv -->
+              <div>
+                <img />
+                <div></div>
+              </div>
+              <!-- 4-rtomdiv -->
+              <div>
+                <img />
+                <div></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Special Savings -->
       <section></section>
 
-      <section></section>
-
-      <section></section>
-
-      <section></section>
+      <footer></footer>
     </main>
   </body>
 </html>
