did only@apple need to scroll pro-list

--- a/apple-store.html
+++ b/apple-store.html
@@ -330,7 +330,7 @@
                   src="image-store/persona-gift.png"
                   class="personalization-card-first__img"
                 />
-                <div class="personalization-card-first__title">
+                <div class="personalization-card-first__msg">
                   Make their gift one of a kind.
                 </div>
               </div>
@@ -434,49 +434,100 @@
       <section></section>
 
       <!-- Only at Apple -->
-      <section>
-        <div>
+      <section class="onlyapple-container">
+        <div class="onlyapple-content">
           <!-- heading -->
-          <div>
-            <div>Only at Apple.</div>
-            <div>With you every step of the holiday</div>
+          <div class="onlyapple-heads">
+            <div class="onlyapple-head onlyapple-head--heading">
+              Only at Apple.
+            </div>
+            <div class="onlyapple-head onlyapple-head--subheading">
+              With you every step of the holiday
+            </div>
           </div>
           <!-- scroller -->
-          <div>
-            <!-- divuud -->
-            <div>
-              <!-- 1-rtomdiv -->
-              <div>
-                <img />
-                <div>
-                  Get gifts in time for the holidays with two hour delivery,²
-                  free delivery,or easy pickup.
+          <div class="onlyapple-cards-scroller">
+            <!-- dives -->
+            <div class="onlyapple-cards">
+              <!-- 1st-large-div -->
+              <div class="onlyapple-cardxl">
+                <img
+                  src="image-store/oapple-gift.png"
+                  class="onlyapple-cardxl__img"
+                />
+                <div class="onlyapple-cardxl__msg">
+                  Get gifts in time for the<br />
+                  holidays with two hour<br />
+                  delivery,² free<br />
+                  delivery,or easy pickup.
                 </div>
               </div>
-              <!-- 2-rjijigdiv -->
-              <div>
-                <div>
-                  Customize your Mac and create your own style of Apple Watch.
+
+              <div class="onlyapple-cardxs-box">
+                <!-- 1st-small-div -->
+                <div class="onlyapple-cardxs">
+                  <div
+                    class="onlyapple-cardxs__msg onlyapple-cardxs__msg--custom"
+                  >
+                    Customize your Mac and create your own style of Apple Watch.
+                  </div>
                 </div>
-                <div>Pay in full or pay over time. Your choice.</div>
-              </div>
-              <!-- 3-rjijigdiv -->
-              <div>
-                <div>Free extended returns between now and 1/8/25.</div>
-                <div>
-                  Make them yours. Engrave a mix of emoji, names, and numbers
-                  for free.
+                <!-- 2nd-small-div -->
+                <div class="onlyapple-cardxs">
+                  <div class="onlyapple-cardxs__msg onlyapple-cardxs__msg--pay">
+                    Pay in full or pay over time. Your choice.
+                  </div>
                 </div>
               </div>
-              <!-- 3-rtomdiv -->
-              <div>
-                <img />
-                <div></div>
+
+              <div class="onlyapple-cardxs-box">
+                <!-- 3rd-small-div -->
+                <div class="onlyapple-cardxs">
+                  <div
+                    class="onlyapple-cardxs__msg onlyapple-cardxs__msg--free"
+                  >
+                    Free extended returns between now and 1/8/25.
+                  </div>
+                </div>
+                <!-- 4th-small-div -->
+                <div class="onlyapple-cardxs">
+                  <div
+                    class="onlyapple-cardxs__msg onlyapple-cardxs__msg--engrave"
+                  >
+                    Make them yours. Engrave a mix of emoji, names, and numbers
+                    for free.
+                  </div>
+                </div>
               </div>
-              <!-- 4-rtomdiv -->
-              <div>
-                <img />
-                <div></div>
+
+              <!-- 2-nd-large-div -->
+              <div class="onlyapple-cardxl">
+                <img
+                  src="image-store/oapple-trade-in.png"
+                  class="onlyapple-cardxl__img"
+                />
+                <div class="onlyapple-cardxl__protitle">APPLE TRADE IN</div>
+                <div
+                  class="onlyapple-cardxl__msg onlyapple-cardxl__msg--tradein"
+                >
+                  Trade in your current<br />
+                  device. Get credit toward a<br />
+                  new one.³
+                </div>
+              </div>
+              <!-- 3-rd-large-div -->
+              <div class="onlyapple-cardxl">
+                <img
+                  src="image-store/oapple-specialist.jpg"
+                  class="onlyapple-cardxl__img"
+                />
+                <div class="onlyapple-cardxl__protitle">APPLE SPECIALIST</div>
+                <div
+                  class="onlyapple-cardxl__msg onlyapple-cardxl__msg--specialist"
+                >
+                  Find gifts with an Apple<br />
+                  Specialist in a store or online.
+                </div>
               </div>
             </div>
           </div>
